YOUR JOURNEY section pages have web copy for the design team to review.

--- a/app/views/layouts/_main_nav.erb
+++ b/app/views/layouts/_main_nav.erb
@@ -23,10 +23,10 @@
 
         <ul class="dropdown-menu">
           <%= nav_link_to 'Start here', journey_path, {}, { wrapper:'li' } %>
-          <%= nav_link_to 'First term', journey_term1_path, {}, { wrapper:'li' } %>
-          <%= nav_link_to 'Second term', journey_term2_path, {}, { wrapper:'li' } %>
-          <%= nav_link_to 'Third term', journey_term3_path, {}, { wrapper:'li' } %>
-          <%= nav_link_to 'Last term', journey_term4_path, {}, { wrapper:'li' } %>
+          <%= nav_link_to 'First term - Theos', journey_term1_path, {}, { wrapper:'li' } %>
+          <%= nav_link_to 'Second term - Cosmos', journey_term2_path, {}, { wrapper:'li' } %>
+          <%= nav_link_to 'Third term - Anthropos', journey_term3_path, {}, { wrapper:'li' } %>
+          <%= nav_link_to 'Final term - Ethnos', journey_term4_path, {}, { wrapper:'li' } %>
         </ul>
 
       </li>
