--- a/app/views/pages/apply_now.html.erb
+++ b/app/views/pages/apply_now.html.erb
@@ -1,1 +1,10 @@
-<iframe src="https://rivendell.populiweb.com/router/admissions/onlineapplications/index?application_form=795" width="640" height="960" seamless="seamless"></iframe>
+<p class="m-b-lg">
+  Please submit the following information so that we can direct you to the appropriate application.
+</p>
+
+<iframe src="https://rivendell.populiweb.com/router/admissions/onlineapplications/index?application_form=795" width="640" height="450" seamless="seamless"></iframe>
+
+<p class="m-t-lg">
+  (Once you click submit, the full application will appear in a popup window. If you have popups disabled,
+  you will have the option of clicking a link to open the application in a new tab or window.)
+</p>
