--- a/app/views/pages/pedagogy.html.erb
+++ b/app/views/pages/pedagogy.html.erb
@@ -1,2 +1,32 @@
-<h1>Pages#pedagogy</h1>
-<p>Find me in app/views/pages/pedagogy.html.erb</p>
+<p>
+
+  First, the classroom environment will be discussion-driven. This means that students will have
+  opportunity to sharpen the reading, reasoning, and rhetorical skills in a community environment
+  of both peers and professors. This allows students to not only learn the correct answer to questions
+  but provides them with the opportunity to both gain and sharpen their discernment.
+
+  <br /><br />
+
+  Second, the classroom environment will be method-driven. This means that the Rivendell Critical
+  Thinking Method will be heavily emphasized: allowing the Rivendell curriculum to speak for itself.
+  After all, the curriculum is comprised of the greatest minds the western world has ever produced
+  with the greatest book ever given—the Bible—as its foundation, spirit, and structure.
+
+  <br /><br />
+
+  Third, the classroom environment will be goal-driven. Our goal is not knowledge alone. The goal is
+  wisdom and transformation – the culmination and purpose of all endeavors – to the glory of God.
+  This by all means includes a rigorous academic pursuit but seeks so much more. We wish to see students’
+  lives transformed by the power of the God in all areas of their lives, under the lordship of Jesus Christ.
+  This transformation goes far beyond academics: it encompasses heart, spirit, mind, and body as well.
+
+  <br /><br />
+
+  Ours is a model of education based on the rabbinical example of Jesus. Therefore a necessary component
+  of the classroom experience is the outside-the-classroom community. This allows for not only friendship,
+  but also a spirit-empowered application of that which is learned in the classroom. We believe that so
+  much of our learning takes place outside the four walls of the classroom. It is within community that
+  ideas have their full consequence, whether for good or bad. In other words, we are committed to students
+  not only as pupils but also as friends: not only as learners but also as partners in their education.
+
+</p>
