--- a/app/views/pages/term1.html.erb
+++ b/app/views/pages/term1.html.erb
@@ -1,3 +1,25 @@
-<h1>Pages#term1</h1>
-<p>Find me in app/views/pages/term1.html.erb</p>
+<p>
+
+  This term represents our pursuit of God as the cornerstone of all educational efforts and Wisdom
+  as our chief goal. To start this journey, you will learn the Rivendell Critical Thinking and
+  Reading Method – a self-learning process that acts as the key to unlocking all the courses and
+  materials to come.  In addition you will learn the foundations of writing and speaking!
+
+  <br /><br />
+
+  Along the way you will ask and answer fundamental questions like “Is there a God?” and if there is,
+  “What is He like?” or “What is reason’s role in our learning” and “How do we become better critical thinkers?”
+
+  <br /><br />
+
+  As the beginning modules of your Rivendell journey this time will also focus on your cohort
+  community—helping you to build friendships that can last a lifetime. You will be with your cohort
+  for your entire experience: serving together, learning together, and growing together.
+
+  <br /><br />
+
+  The first leg of your journey ends with a thrust out of the conceptual underpinnings of life into
+  the stuff of life – the physical world!
+
+</p>
 
