--- a/app/views/pages/term4.html.erb
+++ b/app/views/pages/term4.html.erb
@@ -1,2 +1,24 @@
-<h1>Pages#term4</h1>
-<p>Find me in app/views/pages/term4.html.erb</p>
+<p>
+
+  This term represents our pursuit of ordered communities as the place where life is perpetuated and supported.
+  You will visit houses of government and examine current policies and practices of both state and federal
+  agencies – seeking to understand what constitutes both a government and an economy, in addition to how to
+  be good participants of both!
+
+  <br /><br />
+
+  You will get to ask and answer questions like “What are the principles of good government?” and “How can
+  wealth be managed to produce flourishing?” This term takes on a practical flavor as you discuss everything
+  from personal finances to personal authority.
+
+  <br /><br />
+
+  As the final set of modules in your Rivendell experience this time will focus on your next steps as you
+  transition from student to lifelong learner and citizen. Many culminating cohort experiences and lots of
+  memories make this term a bit bittersweet.
+
+  <br /><br />
+
+  The final leg of your journey ends with a bang into the next step of your life – learning and citizenship!
+
+</p>
