web copy update.

--- a/app/views/pages/residential_living.html.erb
+++ b/app/views/pages/residential_living.html.erb
@@ -1,2 +1,29 @@
-<h1>Pages#residential_living</h1>
-<p>Find me in app/views/pages/residential_living.html.erb</p>
+<h3 class="text-center font-thin font-italic">
+  The furnace of character is a community, not an island.
+</h3>
+
+<p class="m-t-lg">
+
+  In dorm communities, separated by gender, students experience life together in a green-house-like environment.
+  In this space, personal development is exponentially increased. Ones character is put on display.
+
+  <br /><br />
+
+  In the midst of this garden of people, faculty and staff join together to provide life skills, manners, and
+  etiquette – the arts of respecting others. Due to the its highly personal nature, topics, tools, and workshops
+  are chosen based on community needs. These can vary from the most basic of skills such as “how do I do laundry?”
+  to “how do I dress appropriately for the occasion?” or even “how do I succeed in an interview.” Topics for
+  our workshops include: interpersonal skills, conflict resolution, and cultural sensitivity.
+
+  <br /><br />
+
+  Our In-Comm education raises the bar of personal development and accountability on the belief than Men and Women
+  can live virtuous lives marked by civility and responsibility, through practice.
+
+  <br /><br />
+
+  Likewise, a community is brought together by more than ‘space’. It is also brought together by communion:
+  with God and themselves. Time spent together in worship, prayer, and efforts toward common goals draw each
+  cohort together in a way that can birth friendships that last a lifetime.
+
+</p>
