--- a/app/views/pages/sacrificial_loving.html.erb
+++ b/app/views/pages/sacrificial_loving.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#sacrificial_loving</h1>
-<p>Find me in app/views/pages/sacrificial_loving.html.erb</p>
+<h3 class="font-italic font-thin text-center">
+  At minimum love is a sacrifice; at maximum it is a death sentence…
+</h3>
+
+
