--- a/lib/assets/stylesheets/_utilities.scss
+++ b/lib/assets/stylesheets/_utilities.scss
@@ -261,6 +261,9 @@
 .font-semibold {
   font-weight: 600;
 }
+.font-italic {
+  font-style: italic;
+}
 .font-bold {
   font-weight: 700;
 }
@@ -289,6 +292,7 @@
 .text-ul {
   text-decoration: underline;
 }
+
 
 
 
