--- a/app/views/pages/building_character.html.erb
+++ b/app/views/pages/building_character.html.erb
@@ -1,2 +1,13 @@
-<h1>Pages#building_character</h1>
-<p>Find me in app/views/pages/building_character.html.erb</p>
+<h3 class="text-center font-thin font-italic">
+  “Education as a whole person enterprise requires heart work as well as head work, else our efforts be
+  spent in vain.”
+</h3>
+
+<p class="m-t-lg">
+
+  We all of have heard the phrase, “Practice makes perfect”…or is it, “perfect practice makes perfect?”
+  A modern once said that decisions lead to actions, actions lead to habits, and habits lead to character.
+  But on the other hand, an ancient once said that habits built over a lifetime lead to either virtue or vice.
+  So perhaps the question we’re all really asking is “through what kinds of practice may I lead a virtuous life?”
+
+</p>
