--- a/app/views/pages/courses.html.erb
+++ b/app/views/pages/courses.html.erb
@@ -18,7 +18,7 @@
 
               <%= content_tag :td, course.identifier %>
 
-              <%= content_tag :td, link_to(course.name, course, data: { toggle:'modal', target:'#course-description' }) %>
+              <%= content_tag :td, link_to(course.name, course, remote:true) %>
 
               <%= content_tag :td, course.term %>
 
@@ -32,4 +32,4 @@
 
 </div>
 
-
+<%= content_tag :div, nil, id:'course-description', class:'modal fade', tabindex:'-1', role:'dialog' %>
