added financial aid page.  work in progress.

--- a/app/views/pages/financial_aid.html.erb
+++ b/app/views/pages/financial_aid.html.erb
@@ -1,2 +1,50 @@
-<h1>Pages#financial_aid</h1>
-<p>Find me in app/views/pages/financial_aid.html.erb</p>
+<p>
+
+  At San Diego Christian’s Rivendell Program, our first priority is to offer a superior education; our next
+  priority is to make it affordable. We are doing everything we can to keep costs low while holding fast to
+  high standards. The Rivendell program utilizes outside donors and partnerships to offer financial aid to our
+  students who demonstrate individual need. Our admissions counselors will work with you to build a financial
+  aid plan specific to you and your family’s situation. There are numerous financial sources that will help
+  make the Rivendell program affordable:
+
+  <ol>
+
+    <li>Federal financial aid (FAFSA school code: 012031)</li>
+
+    <li>Minnesota financial aid (FAFSA school code: 012031)</li>
+
+    <li>Parent contribution</li>
+
+    <li>Student savings</li>
+
+    <li>Private loans</li>
+
+    <li>Rivendell institutional aid</li>
+
+    <li>Affordable payment plan options</li>
+
+    <li>Lifetime Learning tax credits</li>
+
+    <li>Hope/American Opportunity tax credits</li>
+
+    <li>Veterans benefits (MN GI Bill, Post 9/11 GI Bill, etc.)</li>
+
+  </ol>
+
+</p>
+
+<h3 class="font-thin">Institutional Aid for Programs Starting Fall 2015</h3>
+
+<h3 class="font-thin">Additional Resources</h3>
+
+<ul>
+
+  <%= content_tag :li,  link_to('www.collegeanswer.com', 'https://www.salliemae.com/plan-for-college/', target:'_blank') %></li>
+
+  <%= content_tag :li,  link_to('www.fastweb.com', 'http://www.fastweb.com', target:'_blank') %></li>
+
+  <%= content_tag :li,  link_to('www.finaid.com', 'http://www.finaid.com', target:'_blank') %></li>
+
+  <%= content_tag :li,  link_to('www.studentaid.ed.gov', 'http://www.studentaid.ed.gov', target:'_blank') %></li>
+
+</ul>
