financial aid page complete.

--- a/app/views/pages/financial_aid.html.erb
+++ b/app/views/pages/financial_aid.html.erb
@@ -35,6 +35,63 @@
 
 <h3 class="font-thin">Institutional Aid for Programs Starting Fall 2015</h3>
 
+<div class="well">
+
+  <div class="row">
+
+    <div class="col-md-4 col-sm-12">
+      <p>
+        <b>Referral Scholarship</b> (Uncapped) -- An accepted student who refers another student who
+        attends will each be awarded a $1,000 scholarship. There are no caps on recruiting. Contact your
+        admissions counselor for more details.
+      </p>
+    </div>
+
+    <div class="col-md-4 col-sm-12">
+      <p>
+        <b>Church Match Grant</b> (Up to $2,000 total) -- We will match up to $2,000 of funds given by the church.
+        Students should apply for the grant when completing the institutional aid application.
+      </p>
+    </div>
+
+    <div class="col-md-4 col-sm-12">
+      <p>
+        <b>Campus Scholarship Visit</b> ($1,000 total) -- Awarded to any student who visits campus prior to or
+        during the admissions process. Visits must be coordinated through the Admissions Office.
+      </p>
+    </div>
+
+  </div>
+
+  <div class="row">
+
+    <div class="col-md-4 col-sm-12">
+      <p>
+        <b>Affiliation Award</b> ($1,000 total) -- Granted to students who demonstrate completion of a
+        program/camp of one of our partners. Eligible organizations are Summit Ministries, Worldview Academy,
+        lassical Conversations, YWAM, and CiRCE Institute.
+      </p>
+    </div>
+
+    <div class="col-md-4 col-sm-12">
+      <p>
+        <b>The Norment Scholarship<sup>&#8224;</sup></b> (Up to $6,000 total) -- Given by Bobby and Jean Norment,
+        this grant is awarded to students on a needs-basis who demonstrate passion and commitment to the mission
+        and vision of the Rivendell program.
+      </p>
+    </div>
+
+    <div class="col-md-4 col-sm-12">
+      <p>
+        <b>Early Acceptance Scholarship</b> ($1,000 total) -- Granted to students who submit all application
+        components and are granted acceptance prior to May 30 for the Fall 2015 programs.
+      </p>
+    </div>
+
+  </div>
+
+</div>
+
 <h3 class="font-thin">Additional Resources</h3>
 
 <ul>
@@ -48,3 +105,7 @@
   <%= content_tag :li,  link_to('www.studentaid.ed.gov', 'http://www.studentaid.ed.gov', target:'_blank') %></li>
 
 </ul>
+
+<p class="font-italic m-t-lg">
+  <sup>&#8224;</sup> Requires additional application submission.
+</p>
