initial tuition page complete.

--- a/app/views/pages/tuition.html.erb
+++ b/app/views/pages/tuition.html.erb
@@ -1,1 +1,176 @@
+<p>
 
+  The Rivendell Program offers an “all-inclusive” college experience. There are four total semesters in the
+  program. Our goal is to be as cost effective as possible for our students while offering a high value program
+  including features such as study abroad, cultural events, etc. We feel these included features are not only
+  beneficial, but essential in equipping exceptional students to become extraordinary citizens.
+
+  <br /><br />
+
+  Please see our <%= link_to 'financial aid page', admissions_financial_aid_path %> to learn more about the
+  different ways you can fund your Rivendell education through scholarships, grants, and loans.
+
+</p>
+
+<div class="row">
+
+  <div class="col-md-12 col-sm-12">
+
+    <h3 class="font-thin">Learning Experience:  All-inclusive tuition</h3>
+
+    <ul>
+
+      <li>Tuition</li>
+
+      <li>All books and course materials</li>
+
+      <li>Rivendell Critical Thinking Method</li>
+
+      <li>Study abroad: all study in Florence, Venice, and Rome.</li>
+
+      <li>Semester seminars: classroom learning from visiting experts in their field of study</li>
+
+      <li>Campus library and online library resource center</li>
+
+      <li>Personal tutoring</li>
+
+      <li>Technology fee</li>
+
+      <li>Tuition lock guarantee (see explanation below)</li>
+
+      <li>Administrative fee</li>
+
+      <li>Graduation fee</li>
+
+    </ul>
+
+    <h4 class="text-ul pull-right">The cost per semester for our all-inclusive tuition is $11,975</h4>
+
+  </div>
+
+</div>
+
+<div class="row">
+
+  <div class="col-md-12 col-sm-12">
+
+    <h3>Living Experience:  All inclusive room & board</h3>
+
+    <ul>
+
+      <li>Room: Traditional residence halls for men, apartment-style residence halls for women while in Minnesota</li>
+
+      <li>Room: All accommodations in Italy (Venice, Florence, and Rome)</li>
+
+      <li>Board: 3 meals per day while in Minnesota</li>
+
+      <li>Board: 3 meals per day while in Italy</li>
+
+      <li>
+        Transportation: All transportation costs are included during the study abroad experience including airfare,
+        visa, in-country travel, room & board, and travel insurance, etc.
+      </li>
+
+      <li>Cultural Events in Minnesota: Broadway shows, operas, symphonies, formal dinners, etc.</li>
+
+      <li>
+        Cultural Events in Italy: Admission to multiple museums and historical sites, professional tour guides,
+        full-time Italian social coordinator, etc
+      </li>
+
+      <li>Activity Fee: Community events, intramural sports, weight room/exercise facilities, racquetball court, etc.</li>
+
+      <li>Community service projects (organization and transportation): Feed My Starving Children, Salvation Army, USO, etc.</li>
+
+      <li>High-speed wireless internet (campus-wide)</li>
+
+      <li>Laundry</li>
+
+      <li>Campus Security Fee and Student ID; RAVE Emergency Alert System</li>
+
+    </ul>
+
+    <h4 class="text-ul pull-right">The cost per semester for our all-inclusive room & board is $3,995</h4>
+
+  </div>
+
+</div>
+
+<div class="row">
+
+  <div class="col-md-12 col-sm-12">
+
+    <h3>Required for all enrolled students:</h3>
+
+    <ul>
+
+      <li>
+        Personal Laptop: Must be compatible with Windows software; Mac users must install VMWare Fusion prior
+        to arriving on campus in order to operate necessary software (this can be purchased on campus if desired)
+      </li>
+
+      <li>
+        Personal Medical Insurance: students are required to maintain up-to-date medical insurance for the
+        duration of their enrollment in the program, which is valid for use in the United States
+      </li>
+
+    </ul>
+
+  </div>
+
+</div>
+
+<div class="row">
+
+  <div class="col-md-12 col-sm-12">
+
+    <h3>Optional expenses:</h3>
+
+    <ul>
+
+      <li>Campus Parking Permit: $100 per semester (non-refundable)</li>
+
+      <li>Personal expenses, including transportation to/from home for semester breaks, etc.</li>
+
+    </ul>
+
+  </div>
+
+</div>
+
+<div class="row">
+
+  <div class="col-md-12 col-sm-12">
+
+    <h3>Deposits (one-time)</h3>
+
+    <ul>
+
+      <li>U.S. Student Enrollment Reservation Deposit (applied to first semester tuition): $500</li>
+
+      <li>
+        International Student Enrollment Reservation Deposit (applied to first semester tuition. This deposit
+        is fully refundable should an International student’s visa application be denied.): $1,000
+      </li>
+
+    </ul>
+
+  </div>
+
+</div>
+
+<div class="row">
+
+  <div class="col-md-12 col-sm-12">
+
+    <h3>Rivendell's Tuition Lock Guarantee</h3>
+
+    <p>
+      The cost of tuition will remain the same throughout the four consecutive semesters of a student’s
+      enrollment. This tuition lock is voided if a student withdraws from the program for any reason and
+      re-enrolls at a later date.
+    </p>
+
+  </div>
+
+</div>
