Updated colors to Rivendell colors. Resolved height displacement in header.

--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -2,7 +2,7 @@
 
   <div class="container">
 
-    <ul id="social-nav-top" class="social-icons col-md-6 col-sm-6 col-xs-12 hidden-xs m-t-xs">
+    <ul id="social-nav-top" class="social-icons col-md-6 col-sm-6 col-xs-12 hidden-xs">
       <%= content_tag :li, link_to(icon('twitter'), @twitter_url, target:'_blank') %>
       <%= content_tag :li, link_to(icon('facebook'), @facebook_url, target:'_blank') %>
       <%= content_tag :li, link_to(icon('pinterest'), @pinterest_url, target:'_blank') %>
