home page contact form now create contacts and sending appropriate follow-up emails.

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,5 +1,6 @@
 @import "includes/variables";
 @import "includes/mixins";
+@import 'formValidation.min';
 
 * {
     -webkit-box-sizing: border-box;
