--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,5 +26,6 @@
 
             </div><!-- /pusher -->
         </div><!-- /container -->
+        <%= debug params if Rails.env.development? %>
     </body>
 </html>
