--- a/app/views/layouts/_footer.erb
+++ b/app/views/layouts/_footer.erb
@@ -2,10 +2,10 @@
 
   <div class="col-sm-6 menu">
     <ul>
-      <%= content_tag :li, link_to('About', about_path) %>
-      <%= content_tag :li, link_to('5-Pursuits', '#') %>
+      <%= content_tag :li, link_to('Academics', '#') %>
       <%= content_tag :li, link_to('Student Life', '#') %>
       <%= content_tag :li, link_to('Admissions', '#') %>
+      <%= content_tag :li, link_to('Contact', new_contact_path) %>
     </ul>
   </div>
 
