--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -11,13 +11,7 @@
 
   <ul class="nav navbar-nav">
 
-    <%= content_tag :li, link_to('About', about_path) %>
-
-    <%= content_tag :li, link_to('5-Pursuits', '#') %>
-
-    <%= content_tag :li, link_to('Student Life', '#') %>
-
-    <%= content_tag :li, link_to('Admissions', '#') %>
+    <%= render 'layouts/navigation' %>
 
   </ul>
 
