--- a/app/views/layouts/_landing_footer.erb
+++ b/app/views/layouts/_landing_footer.erb
@@ -17,7 +17,7 @@
     <h3>Menu</h3>
     <ul>
       <%= content_tag :li, link_to('About', about_path) %>
-      <%= content_tag :li, link_to('5-Pursuits', '#') %>
+      <%= content_tag :li, link_to('Academics', '#') %>
       <%= content_tag :li, link_to('Student Life', '#') %>
       <%= content_tag :li, link_to('Admissions', '#') %>
     </ul>
