--- a/app/views/layouts/_landing_header.erb
+++ b/app/views/layouts/_landing_header.erb
@@ -11,15 +11,7 @@
 
   <ul class="nav navbar-nav navbar-right">
 
-    <%= content_tag :li, link_to('About', about_path) %>
-
-    <%= content_tag :li, link_to('5-Pursuits', '#') %>
-
-    <%= content_tag :li, link_to('Student Life', '#') %>
-
-    <%= content_tag :li, link_to('Admissions', '#') %>
-
-    <%= content_tag :li, link_to('Contact', new_contact_path) %>
+    <%= render 'layouts/navigation' %>
 
   </ul>
 
