--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -38,6 +38,7 @@
 @import 'partials/pages/services';
 @import 'partials/pages/portfolio';
 @import 'partials/pages/contactus';
+@import 'partials/pages/signup';
 @import 'partials/pages/404';
 
 /* utilities */
