--- a/app/views/landing_pages/student.html.erb
+++ b/app/views/landing_pages/student.html.erb
@@ -37,7 +37,7 @@
       <div class="col-md-6 info">
         <h4>Study one subject at a time...</h4>
         <p>
-         I need 40 words on ONE SUBJECT AT A TIME.
+          I need 40 words on ONE SUBJECT AT A TIME.
         </p>
       </div>
       <div class="col-md-6 image" %>
@@ -68,7 +68,7 @@
   <div class="container">
     <div class="row header">
       <div class="col-md-12">
-        <h3>Three Rivendell solutions for your community:</h3>
+        <h3>Three great reasons to start college with Rivendell:</h3>
       </div>
     </div>
     <div class="row charts">
@@ -241,7 +241,7 @@
 
 <div id="cta">
   <p>Take the first step on your 16-month journey of a lifetime!</p>
-  <%= link_to 'Apply now', '#' %>
+  <%= link_to 'Download a brochure', new_lead_path %>
 </div>
 
 <div id="clients">
