--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
@@ -14,7 +13,7 @@
 <header class="navbar navbar-inverse hero" role="banner">
 
   <div class="container">
-    <%= render 'landing_pages/header' %>
+    <%= render 'layouts/landing_header' %>
   </div>
 
 </header>
@@ -24,12 +23,10 @@
 <div id="footer-white">
 
   <div class="container">
-    <%= render 'landing_pages/footer' %>
+    <%= render 'layouts/landing_footer' %>
   </div>
 
 </div>
-
-<%= debug(params) if Rails.env.development? %>
 
 </body>
 
