--- a/app/views/layouts/_landing_header.erb
+++ b/app/views/layouts/_landing_header.erb
@@ -4,7 +4,10 @@
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
   </button>
-  <%= link_to @company_name, root_path, class:'navbar-brand' %>
+  <div id="header-logo">
+    <%= image_tag('banner-logo.png', alt: 'Banner Logo') %>
+  </div>
+  <!--<%= link_to @company_name, root_path, class:'navbar-brand' %>-->
 </div>
 
 <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
