--- a/app/views/landing_pages/_header.erb
+++ b/app/views/landing_pages/_header.erb
@@ -4,12 +4,14 @@
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
   </button>
-
+    <div id="header-logo">
+        <%= image_tag('banner-logo.png', alt: 'Banner Logo') %>
+    </div>
 </div>
 
 <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
 
-  <ul class="nav navbar-nav navbar-center">
+  <ul class="nav navbar-nav navbar-right">
 
     <%= content_tag :li, link_to('Journey', '#features') %>
 
