--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
 <body id="<%= @body_id %>">
 
-<header class="navbar navbar-inverse normal" role="banner">
+<header class="navbar navbar-inverse normal no-hero" role="banner">
 
   <div class="container">
     <%= render 'layouts/header' %>
