changed landing page.

--- a/app/views/landing_pages/_header.erb
+++ b/app/views/landing_pages/_header.erb
@@ -13,7 +13,7 @@
 
   <ul class="nav navbar-nav navbar-right">
 
-    <%= content_tag :li, link_to('Journey', '#features') %>
+    <%= content_tag :li, link_to('Program', '#features') %>
 
     <%= content_tag :li, link_to('Testimonials', '#testimonials') %>
 
