--- a/app/views/landing_pages/student.html.erb
+++ b/app/views/landing_pages/student.html.erb
@@ -13,7 +13,6 @@
 
     <div class="cta animated fadeInDown">   <!-- TODO add anchors on each linked page -->
       <%= link_to 'Request a brochure', new_lead_path, class:'button-outline' %>
-      <%= link_to 'Apply now', '#', class:'button' %>
     </div>
 
   </div>
@@ -241,7 +240,7 @@
 
 <div id="cta">
   <p>Take the first step on your 16-month journey of a lifetime!</p>
-  <%= link_to 'Download a brochure', new_lead_path %>
+  <%= link_to 'Request a brochure', new_lead_path %>
 </div>
 
 <div id="clients">
@@ -249,7 +248,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h3>Education partners</h3>
+        <h3>Our education partners</h3>
         <p>We are a regionally accredited program of San Diego Christian and the Western Association of Schools and Colleges.</p>
         <div class="logos">
           <%= image_tag 'SDCC-logo.png' %>
