--- a/app/views/site_pages/home.html.erb
+++ b/app/views/site_pages/home.html.erb
@@ -68,7 +68,7 @@
   <div class="container">
     <div class="row header">
       <div class="col-md-12">
-        <h3>Three Rivendell solutions for your community:</h3>
+        <h3>Three reasons to start your college journey with Rivendell:</h3>
       </div>
     </div>
     <div class="row charts">
