--- a/app/views/landing_pages/parent.html.erb
+++ b/app/views/landing_pages/parent.html.erb
@@ -1,2 +1,42 @@
-<h1>LandingPages#parent</h1>
-<p>Find me in app/views/landing_pages/parent.html.erb</p>
+<div id="hero">
+
+  <%= render 'shared/hero' %>
+
+</div>
+
+<div id="features">
+
+  <%= render 'shared/features' %>
+
+</div>
+
+<div id="pricing">
+
+  <%= render 'shared/reasons' %>
+
+</div>
+
+<div id="slider">
+
+  <%= render 'shared/travel' %>
+
+</div>
+
+<div id="testimonials">
+
+  <%= render 'shared/testimonials' %>
+
+</div>
+
+<div id="cta">
+
+  <%= render 'shared/cta' %>
+
+</div>
+
+<div id="clients">
+
+  <%= render 'shared/partners' %>
+
+</div>
+
