site skeleton complete.  navigation complete.  all specs pass.

--- a/app/views/layouts/_navigation.erb
+++ b/app/views/layouts/_navigation.erb
@@ -1,9 +1,9 @@
 <%= content_tag :li, link_to('About', about_path) %>
 
-<%= content_tag :li, link_to('Academics', '#') %>
+<%= content_tag :li, link_to('Academics', academics_path) %>
 
-<%= content_tag :li, link_to('Student Life', '#') %>
+<%= content_tag :li, link_to('Student Life', student_life_path) %>
 
-<%= content_tag :li, link_to('Admissions', '#') %>
+<%= content_tag :li, link_to('Admissions', admissions_path) %>
 
 <%= content_tag :li, link_to('Contact', new_contact_path) %>
