--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -4,15 +4,12 @@
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
   </button>
-    <div id="header-logo">
-        <%= image_tag('banner-logo.png', alt: 'Banner Logo') %>
-    </div>
-  <!--<%= link_to @company_name, root_path, class:'navbar-brand' %>-->
+  <%= link_to @company_name, root_path, class:'navbar-brand' %>
 </div>
 
 <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
 
-  <ul class="nav navbar-nav">
+  <ul id="top-nav" class="nav navbar-nav">
 
     <%= render 'layouts/navigation' %>
 
@@ -20,7 +17,7 @@
 
   <ul class="nav navbar-nav navbar-right visible-md visible-lg">
 
-    <%= content_tag :li, link_to('Apply now', '#', class:'button') %>
+    <%= content_tag :li, link_to('Apply now', apply_now_path, class:'button') %>
 
   </ul>
 
