--- a/app/views/layouts/_landing_footer.erb
+++ b/app/views/layouts/_landing_footer.erb
@@ -5,8 +5,8 @@
     <h3>Overview</h3>   <!-- TODO:  add anchors on each linked page -->
     <ul>
       <%= content_tag :li, link_to('Leadership', about_path) %>
-      <%= content_tag :li, link_to('Faculty', '#') %>
-      <%= content_tag :li, link_to('Curriculum', '#') %>
+      <%= content_tag :li, link_to('Faculty', about_path) %>
+      <%= content_tag :li, link_to('Curriculum', academics_path) %>
       <%= content_tag :li, link_to('Contact us', new_contact_path) %>
     </ul>
 
@@ -17,9 +17,9 @@
     <h3>Menu</h3>
     <ul>
       <%= content_tag :li, link_to('About', about_path) %>
-      <%= content_tag :li, link_to('Academics', '#') %>
-      <%= content_tag :li, link_to('Student Life', '#') %>
-      <%= content_tag :li, link_to('Admissions', '#') %>
+      <%= content_tag :li, link_to('Academics', academics_path) %>
+      <%= content_tag :li, link_to('Student Life', student_life_path) %>
+      <%= content_tag :li, link_to('Admissions', admissions_path) %>
     </ul>
 
   </div>
