added /admissions/apply_now view.

--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -17,7 +17,7 @@
 
   <ul class="nav navbar-nav navbar-right visible-md visible-lg">
 
-    <%= content_tag :li, link_to('Apply now', apply_now_path, class:'button') %>
+    <%= content_tag :li, link_to('Apply now', admissions_apply_now_path, class:'button') %>
 
   </ul>
 
