--- a/app/views/site_pages/home.html.erb
+++ b/app/views/site_pages/home.html.erb
@@ -13,7 +13,7 @@
 
     <div class="cta animated fadeInDown">   <!-- TODO add anchors on each linked page -->
       <%= link_to 'Request a brochure', new_lead_path, class:'button-outline' %>
-      <%= link_to 'Apply now', '#', class:'button' %>
+      <%= link_to 'Apply now', admissions_apply_now_path, class:'button' %>
     </div>
 
   </div>
@@ -46,7 +46,7 @@
 
 <div id="cta">
   <p>Take the first step on your 16-month journey of a lifetime!</p>
-  <%= link_to 'Apply now', '#' %>
+  <%= link_to 'Apply now', admissions_apply_now_path %>
 </div>
 
 <div id="clients">
