--- a/app/views/layouts/_navigation.erb
+++ b/app/views/layouts/_navigation.erb
@@ -1,9 +1,9 @@
-<%= content_tag :li, link_to('About', about_path) %>
+<%= nav_link_to 'About', about_path, {}, { wrapper: 'li' } %>
 
-<%= content_tag :li, link_to('Academics', academics_path) %>
+<%= nav_link_to 'Academics', academics_path, {}, { wrapper: 'li' } %>
 
-<%= content_tag :li, link_to('Student Life', student_life_path) %>
+<%= nav_link_to 'Student Life', student_life_path, {}, { wrapper: 'li' } %>
 
-<%= content_tag :li, link_to('Admissions', admissions_path) %>
+<%= nav_link_to 'Admissions', admissions_path, {}, { wrapper: 'li', url_segment: 1 } %>
 
-<%= content_tag :li, link_to('Contact', new_contact_path) %>
+<%= nav_link_to 'Contact', new_contact_path, {}, { wrapper: 'li' } %>
