added sdcc seal to hero for wide screens.  added REASONS section.  Steve to make content boxes same height.

--- a/app/views/shared/_features.erb
+++ b/app/views/shared/_features.erb
@@ -25,7 +25,7 @@
 
   <div class="row feature backwards">
     <div class="col-md-6 info">
-      <h4>...in the flow of the biblical narrative</h4>
+      <h4>...in the flow of the biblical narrative.</h4>
       <p>
         I need 40 words on THE FLOW OF THE BIBLICAL NARRATIVE
       </p>
