--- a/app/views/shared/_travel.erb
+++ b/app/views/shared/_travel.erb
@@ -13,19 +13,7 @@
         <%= content_tag :div, nil, class:'btn-nav prev' %>
         <%= content_tag :div, nil, class:'btn-nav next' %>
         <div class="slide active">
-          <%= holder_tag '664x332', 'italy cutout 1(664x332)' %>
-        </div>
-        <div class="slide">
-          <%= holder_tag '664x332', 'italy cutout 2(664x332)' %>
-        </div>
-        <div class="slide">
-          <%= holder_tag '664x332', 'italy cutout 3(664x332)' %>
-        </div>
-        <div class="slide">
-          <%= holder_tag '664x332', 'italy cutout 4(664x332)' %>
-        </div>
-        <div class="slide">
-          <%= holder_tag '664x332', 'italy cutout 5(664x332)' %>
+          <%= image_tag 'slider/female-doctor1.png' %>
         </div>
       </div>
 
