--- a/app/views/site_pages/home.html.erb
+++ b/app/views/site_pages/home.html.erb
@@ -16,6 +16,8 @@
       <%= link_to 'Apply now', admissions_apply_now_path, class:'button' %>
     </div>
 
+    <%= content_tag :div, nil, class:'img' %>
+
   </div>
 
 </div>
