--- a/app/views/shared/_reasons.erb
+++ b/app/views/shared/_reasons.erb
@@ -3,74 +3,97 @@
   <div class="row header">
     <div class="col-md-12">
       <h3>Three great reasons to start college with Rivendell</h3>
+      <p>Become a student of honor, not just an honor student.</p>
     </div>
   </div>
   <div class="row charts">
 
     <div class="col-md-4">
       <div class="chart first">
+        <div class="quantity">
+          <span class="price">1</span>
+        </div>
         <%= content_tag :div, 'Community', class:'plan-name' %>
         <div class="specs">
           <div class="spec">
-            <%= content_tag :span, 'AA', class:'variable' %>
-            degree
+            <%= content_tag :span, 'Grow', class:'variable' %>
+            with the same classmates
           </div>
           <div class="spec">
-            <%= content_tag :span, 'Foundations', class:'variable' %>
-            for life
+            <%= content_tag :span, 'Process', class:'variable' %>
+            with the same professors
+          </div>
+          <div class="spec">
+            <%= content_tag :span, 'Practice', class:'variable' %>
+            servant leadership
+          </div>
+          <div class="spec">
+            <%= content_tag :span, 'Apply', class:'variable' %>
+            learning in the surrounding community
           </div>
         </div>
-        <%= link_to content_tag(:span, 'Learn more'), '#', class:'btn-signup button-clear' %>
+        <%= link_to content_tag(:span, 'Learn more'), academics_path, class:'btn-signup button-clear' %>
       </div>
     </div>
 
     <div class="col-md-4">
-      <div class="chart">
-        <%= content_tag :div, @solution_2_name, class:'plan-name' %>
+      <div class="chart featured">
+        <%= content_tag :div, 'college core', class:'popular' %>
+        <div class="quantity">
+          <span class="price">2</span>
+        </div>
+        <%= content_tag :div, 'Exceptional', class:'plan-name' %>
         <div class="specs">
           <div class="spec">
-            <%= content_tag :span, 'AA', class:'variable' %>
-            degree
+            <%= content_tag :span, 'Finish', class:'variable' %>
+            hour first 2 years of college in 16-months.
           </div>
           <div class="spec">
-            <%= content_tag :span, '16', class:'variable' %>
-            months to complete
+            <%= content_tag :span, 'Learn', class:'variable' %>
+            from history's greatest thinkers
           </div>
           <div class="spec">
-            <%= content_tag :span, 'Foundations', class:'variable' %>
-            for life
+            <%= content_tag :span, 'Restore', class:'variable' %>
+            purpose and meaning to the 'gen eds'
           </div>
           <div class="spec">
             <%= content_tag :span, 'Study abroad', class:'variable' %>
             included
           </div>
         </div>
-        <%= link_to content_tag(:span, 'Learn more'), '#', class:'btn-signup button-clear' %>
+        <%= link_to content_tag(:span, 'Learn more'), academics_path, class:'btn-signup button-clear' %>
       </div>
     </div>
 
     <div class="col-md-4">
       <div class="chart last">
-        <%= content_tag :div, @solution_3_name, class:'plan-name' %>
+        <div class="quantity">
+          <span class="price">3</span>
+        </div>
+        <%= content_tag :div, 'Travel', class:'plan-name' %>
         <div class="specs">
           <div class="spec">
-            <%= content_tag :span, 'BA', class:'variable' %>
-            degree
+            <%= content_tag :span, 'Explore', class:'variable' %>
+            Rome, Florence, Venice, and Assisi
           </div>
           <div class="spec">
-            <%= content_tag :span, '24', class:'variable' %>
-            months to complete
+            <%= content_tag :span, 'Critique', class:'variable' %>
+            and interpret art
           </div>
           <div class="spec">
-            <%= content_tag :span, 'Foundations', class:'variable' %>
-            for life
+            <%= content_tag :span, 'Experience', class:'variable' %>
+            raw history
           </div>
           <div class="spec">
-            <%= content_tag :span, 'Study abroad', class:'variable' %>
-            included
+            <%= content_tag :span, 'Learn', class:'variable' %>
+            cross-cultural life skills
+          </div>
+          <div class="spec">
+            <%= content_tag :span, 'Included', class:'variable' %>
+            in the base tuition
           </div>
         </div>
-        <%= link_to content_tag(:span, 'Learn more'), '#', class:'btn-signup button-clear' %>
+        <%= link_to content_tag(:span, 'Learn more'), academics_path, class:'btn-signup button-clear' %>
       </div>
     </div>
 
