--- a/app/views/shared/_travel.erb
+++ b/app/views/shared/_travel.erb
@@ -13,7 +13,7 @@
         <%= content_tag :div, nil, class:'btn-nav prev' %>
         <%= content_tag :div, nil, class:'btn-nav next' %>
         <div class="slide active">
-          <%= image_tag 'slider/female-doctor1.png' %>
+          <%= image_tag 'slider/italy.png' %>
         </div>
       </div>
 
