--- a/app/views/site_pages/home.html.erb
+++ b/app/views/site_pages/home.html.erb
@@ -11,12 +11,12 @@
       Experience the journey of your lifetime.
     </p>
 
-    <div class="cta animated fadeInDown">   <!-- TODO add anchors on each linked page -->
+    <div class="cta animated fadeInDown">
       <%= link_to 'Request a brochure', new_lead_path, class:'button-outline' %>
       <%= link_to 'Apply now', admissions_apply_now_path, class:'button' %>
     </div>
 
-    <%= content_tag :div, nil, class:'img' %>
+    <%= content_tag :div, nil, class:'img animated fadeInRight' %>
 
   </div>
 
